--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --background-light: #ffffff;
   --background-primary: #FFE6E6;
   --background-secondary: #F2D1D1;
+  --background-tertiary: #FEE7F1;
 }
 
 
