--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
   height: 100%;
   position: relative;
 }
+
+@import 'tailwindcss/base';
+
+@import 'tailwindcss/components';
+
+@import 'tailwindcss/utilities';
