--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,15 +1,15 @@
 
 .card-container{
-    height: 400px;
+    height: 480px;
     width: 100%;
     background-color: var(--background-secondary);
-    border-radius: 10px;
-    padding: 12px 6px;
+    border-radius: 15px;
     transition: all .3s;
     display: grid;
-    grid-template-rows: 300px 1fr;
+    grid-template-rows: 350px 1fr;
 
     &:hover{
+        transform: scale(1.01);
         transition: all .3s;
         box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
         cursor: pointer;
@@ -24,10 +24,15 @@
 }
 
 .card-image{
+    border-radius: 15px;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card-info{
+    background-color: var(--background-secondary);
+    border-radius: 15px;
     padding: 12px 18px;
     h2{ margin: 8px 0;}
     p{ margin: 4px 0;}
