--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -1,7 +1,21 @@
 
+.main-layout-container {
+    min-height: calc(100vh - 4rem - 56px);
+    padding: 0 10%;
+    padding-top: calc(4rem + 56px);
 
-.mainlayout-container{
-    margin-top: 56px;
-    height: 100%;
-    background-color: var(--mainlayout-container);
+    h1 {
+        font-size: 4rem;
+        font-weight: 500;
+    }
+
+}
+
+.main-content {
+    padding-top: 56px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    row-gap: 80px;
+    margin: auto;
 }
