Footer structure init

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --background-primary: #FFE6E6;
   --background-secondary: #F2D1D1;
   --background-tertiary: #FEE7F1;
+  --background-dark: #CD9E92;
 }
 
 
