--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,13 +3,14 @@
     width: 100%;
     margin: auto;
     height: 56px;
-    position: absolute;
+    position: sticky;
     top: 0;
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
     align-items: center;
-    background-color:rgba(var(--primary-color), 0.5);
-    backdrop-filter: blur(3px);
+    background-color:rgba(var(--background-primary), 0.8);
+    backdrop-filter: blur(5px);
+    z-index: 1000;
 }
 
 .navbar-links{
