--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -34,3 +34,26 @@
 .footer-logo-image {
     width: 80%;
 }
+
+.footer-link{
+    color: var(--text-primary);
+    text-decoration: none;
+    font-weight: 300;
+    transition: all .3s;
+    padding: 3px 5px;
+
+    &:hover {
+        cursor: pointer;
+        transition: all .3s;
+        text-decoration: underline;
+    }
+}
+
+.footer-link-active{
+    color: var(--text-primary);
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: all .3s;
+    padding: 3px 5px;
+    font-weight: 600;
+}
