--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -1,8 +1,8 @@
 
 .main-layout-container {
-    min-height: calc(100vh);
+    position: relative;
     padding: 0 10%;
-    padding-top: calc(4rem + 56px);
+    padding-top: calc(4rem + 56px + 56px);
 }
 
 .main-content {
@@ -21,7 +21,7 @@
 }
 
 .main-landing{
-    height: calc(100vh - 156px - 4rem);
+    height: calc(100vh - 15rem);
 }
 
 .typewriter {
@@ -31,4 +31,20 @@
 
 .typewriter_cursor {
     font-size: 1.2em;
+}
+
+.main-scrolldown-container{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom:50px;
+}
+
+.main-scrolldown{
+    transform: scale(1);
+    transition: all .4s;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
 }
