--- a/src/components/ScrollToTop/ScrollToTop.scss
+++ b/src/components/ScrollToTop/ScrollToTop.scss
@@ -21,10 +21,11 @@
 
 @media only screen and (max-width: 768px) {
     .to-top-button {
+        color: var(--text-primary);
         opacity: 0.7;
         width: 20px;
         height: 20px;
-        bottom: 2vh;
+        bottom: 4vh;
         right: 4vw;
     }
 
