--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -2,10 +2,10 @@
 .main-layout-container {
     position: relative;
     padding: 0 10%;
-    padding-top: calc(4rem + 56px + 56px);
 }
 
 .main-content {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 40px;
@@ -38,7 +38,6 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    bottom:50px;
 }
 
 .main-scrolldown{
@@ -47,4 +46,5 @@
     cursor: pointer;
     border: none;
     background-color: transparent;
+    color: var(--text-primary)
 }
