--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   height: 100%;
   position: relative;
+
+  h2, h3, h4, h5 {
+    color: var(--text-primary)
+  }
 }
 
 @import 'tailwindcss/base';
