--- a/src/components/ProjectItems/Card/Card.scss
+++ b/src/components/ProjectItems/Card/Card.scss
@@ -33,8 +33,8 @@
 .card-info{
     background-color: var(--background-secondary);
     border-radius: 15px;
-    padding: 12px 18px;
-    h2{ margin: 8px 0;}
-    p{ margin: 4px 0;}
+    padding: 16px 28px;
+    h2{ margin: 8px 0; font-weight: 500; font-size: 1.4em;}
+    p{ margin: 4px 0; font-size: 0.9em;}
 }
 
